2008-07-25 Andreas Otto <andreas.otto@dkd.de>
	* XML exports contain source and target lang iso-code in filename.
	* A list of exports will be displayed if checkExports() has detected existing exports.

2008-07-15 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added example in ext_tables.php how to exclude table fields from L10N
	* Added bullets content element for RTE transformations

2008-07-10 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Fixed bug with XML Import error message

2008-06-26 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added textpic to the list of RTE-enabled fields
	* Corrected bug with CATXML. Now no CDATA left in XML. Only when disabling XML-check :-)
	* Fixed bug with inline and empty elements in fieldsi like header, subtitle etc. Seems to be due to error in xml2tree function. To be considered as workaround.

2008-06-09 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Skip XML check, Check UTF-8 checkbox
	* Updated settings for across and SDL Passolo

2008-05-17 Michael Klapper <klapper@aoemedia.de>
	* Allow doktype 6 (external url) to folow the tree used by the export models/class.tx_l10nmgr_l10nAccumulatedInformations.php

2008-05-13 Daniel Zielinski
	* Removed attribs from root element in CATXML

2008-05-09 Daniel Zielinski & Fabian Seltmann @ T3DD08
	* Changed XML format to be consistent (header->t3_XXX elements)
	* Adapted settings for Trados and Passolo
	* Fixed bug with broken tags (e.g. link tags)

2008-04-27 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added translations for German, Spanish, Italian, French (to be continued)

2008-04-25 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added translations for German and Spanish
	* Localization of cm1/index.php
	* Added option: check for already exported contents

2008-04-25 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Fixed PHP4 issue in views/class.tx_l10nmgr_abstractExportView.php (file_put_contents => t3lib_div::writeFile)

2008-04-25 Daniel Zielinski <d.zielinski@l10ntech.de>